fix: Update to collapsable sidebar

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -216,29 +216,27 @@ nav{
 .sidebar-section {
   z-index: 1;
   background-color: rgb(255, 255, 255);
-  height: calc(100vh - 4em);
-  position: relative;
+  height: 100vh;
+  position: fixed;
+  top: 0;
   left: 0;
-  display: block;
-  border-right: .1px solid rgba(0,0,0, .6);
-  transition: all .5s linear;
-  width: 0;
-  opacity: 0;
+  overflow-x: hidden;
+  padding-top: 4em;
+  transition: .5s;
 }
 .sidebar-main-options {
   width: 100%;
   position: absolute;
   background-color: rgb(255, 255, 255);
   padding: 1em 0;
+  transition: all .5s linear;
 }
 .sidebar-options {
-  /* padding: 2em 0; */
   display: none;
   display: flex;
   flex-direction: column;
 }
 .options {
- 
   color: black;
   padding: .6em 1em;
   font-size: 1em;
@@ -246,6 +244,7 @@ nav{
   border-left: 0;
   border-right: 0;
   flex: 1;
+  transition: .3s;
 }
 .options > a, .sidebar-title > a {
   text-decoration: none;
@@ -608,7 +607,6 @@ nav{
 .image-container{
   position:relative;
   height: 300px;
-  /* height: 50vh; */
   width:100%;
   margin:0 auto;
 }
